--- a/index.html
+++ b/index.html
@@ -391,7 +391,12 @@
   
   
   </div>
-</div>
+
+    <div class="flex items-center justify-center p-6">
+      <a class="hover:rounded-md underline p-2 hover:no-underline font-header text-4xl text-center hover:text-white hover:bg-primary" href="/assets/Adam Trac Resume.pdf" download> Resume Download </a>
+    </div>
+
+  </div>
 
 <div class="container py-16 md:py-20" id="services">
   <h2
